--- a/.github/workflows/get-youtube-videos.yml
+++ b/.github/workflows/get-youtube-videos.yml
@@ -1,33 +1,25 @@
-name: Latest YouTube Videos
+name: GitHub Readme YouTube Cards
 
 on:
   schedule:
     - cron: "2-59/5 * * * *"   # every 5 min (02,07,12,...) - reliable
   workflow_dispatch:
 
-permissions:
-  contents: write
-
-concurrency:
-  group: youtube-feed
-  cancel-in-progress: true
-
 jobs:
-  update-readme-with-youtube:
-    name: Update this repo's README with latest videos from YouTube
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Update README with latest YouTube videos
-        uses: gautamkrishnar/blog-post-workflow@v1
+      - uses: DenverCoder1/github-readme-youtube-cards@main
         with:
-          comment_tag_name: "YOUTUBE"             # must match README markers
-          readme_path: "README.md"                # filename correct?
-          feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCLHIBQeFQIxmRveVAjLvlbQ"
-          max_post_count: "4"                     # <-- latest 4
-          date_format: "mmm d, yyyy"
-          custom_tags: "channelId/yt:channelId/,videoId/yt:videoId/"
-          # Reliable thumbnail + clickable image + title on next line
-          template: '- <a href="$url"><img width="240" align="left" src="https://img.youtube.com/vi/$videoId/hqdefault.jpg"></a><br/><a href="$url">$title</a><br/><sub>$date</sub><br clear="left" />$newline'
+          channel_id: UCLHIBQeFQIxmRveVAjLvlbQ   # your channel
+          max_videos: 4
+          comment_tag_name: "YOUTUBE-CARDS"      # README markers match
+          readme_path: "README.md"
+          card_width: 360                        # ≈ 2 cards per row
+          border_radius: 10
+          background_color: "#0d1117"
+          title_color: "#ffffff"
+          stats_color: "#b3b3b3"
+          max_title_lines: 2
